# purerequest

./: CLAUDE.md  LICENSE  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: publish-cask.yml  publish-winget.yml  release.yml
docs/: adr.md  data-format.md  design.md  learnings.md
docs/features/20260619115209-user-settings/: spec.md
docs/features/20260619130809-workspace-config/: spec.md
docs/features/20260619155301-keyboard-shortcuts/: spec.md
docs/features/20260619205059-command-palette/: plan.md  spec.md
docs/features/20260620001410-drag-and-drop/: spec.md
docs/features/20260620111743-environments/: spec.md
docs/features/20260621021033-tree-crud/: spec.md
docs/features/20260621175611-import-export/: spec.md
docs/features/20260621214232-scripts/: plan.md  spec.md
docs/features/20260625025515-bruno-import/: spec.md
docs/features/20260625155948-themes/: spec.md
docs/features/20260625221734-file-logging/: plan.md  spec.md
docs/features/20260625232117-json-config-intellisense/: spec.md
packaging/winget/: Pzielinski.PureRequest.installer.yaml  Pzielinski.PureRequest.locale.en-US.yaml  Pzielinski.PureRequest.yaml  README.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dissect.rs  hpack.rs  lib.rs  logging.rs  main.rs  pcap_capture.rs  qpack.rs  quic_client.rs  quic_crypto.rs  quic_dissect.rs  tap_client.rs
src/__tests__/: pureui-tailwind-source.test.ts  router-no-settings-route.test.ts
src/app/: providers.tsx  suppress-native-context-menu.ts
src/routes/: __root.tsx  index.tsx
src/test/: setup.ts
tests/e2e/: command-palette.e2e.ts  keyboard-navigation.e2e.ts  workspace.e2e.ts
tests/integration/: bootstrap.spec.tsx  theme-root-background.spec.ts
(+475 files in other folders)
