[package]
name = "requi"
version = "0.1.0"
description = "ReqUI - a keyboard-driven, file-based desktop HTTP client"
authors = ["Piotr Zieliński"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "requi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower-layer = "0.3"
tower-service = "0.3"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1"
webpki-roots = "1"
flate2 = "1"
brotli = "8"
url = "2"
pcap = "2"
quinn = "0.11.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
aes = "0.9.1"
ring = "0.17.14"
chacha20 = "0.10.1"

[dev-dependencies]
wiremock = "0.6"
rcgen = "0.13"
flate2 = "1"
